--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,9 +14,9 @@ jobs:
       - name: build
         uses: actions-rs/cargo@v1
         with:
-          command: build --verbose
+          command: build
       - name: test library
         uses: actions-rs/cargo@v1
         with: 
-          command: test --verbose --lib
+          command: test
         
