--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,13 +10,18 @@ jobs:
       - uses: actions-rs/toolchain@v1
         with:
           toolchain: stable
+      - name: lint
+        uses: actions-rs/cargo@v1
+        with:
+          command: clippy
 
       - name: build
         uses: actions-rs/cargo@v1
         with:
           command: build
+          
       - name: test library
         uses: actions-rs/cargo@v1
         with: 
-          command: test -- --nocapture
+          command: test
         
